fixed the paragraph spacing issue

--- a/content.css
+++ b/content.css
@@ -1,7 +1,8 @@
 p {
-  font-family: Arial;
-  font-size: 20px;
-  line-height: 1.45;
-  margin: 0 auto;
-  width: 35em;
+    font-family: Arial;
+    font-size: 1.1875rem;
+    line-height: 1.8125rem;
+    width: 600px;
+    margin: 0 auto;
+    margin-bottom: 1rem;
 }
